Bug 1615270 - [Media-Control Linux] MPRIS: Correctly emit the PropertyChange Event on the Player Interface (https://specifications.freedesktop.org/mpris-spec/latest/Player_Interface.html), r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D63811